fix: post entry field spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,6 +113,7 @@ h6 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
+	margin-top: 10px;
 	border-radius: .4rem 0 0 .4rem;
 	border: none;
 	background-color: #E7E7E7;
